Update social network links in _config.yml

--- a/_posts/2023-12-14-chatgpt.md
+++ b/_posts/2023-12-14-chatgpt.md
@@ -48,6 +48,6 @@ and lately I've found out that often times I get better results from ChatGPT tha
 ![Alt text](/assets/img/posts/2023-12-14/12.png)
 ![Alt text](/assets/img/posts/2023-12-14/13.png)
 
-
+<!-- 
 **Attention is all you need!**
-![Alt text](/assets/img/posts/2023-12-14/transformer.png)
+![Alt text](/assets/img/posts/2023-12-14/transformer.png) -->
