docs: Update link format in llama.md

--- a/_posts/2024-08-29-llama.md
+++ b/_posts/2024-08-29-llama.md
@@ -22,7 +22,8 @@ Jupyter notebook used for this post.
 
 ## Testing Meta-Llama-3.1-8B-Instruct model
 
-I learned most of the stuff from here: https://huggingface.co/blog/llama31
+I learned most of the stuff from here:
+[https://huggingface.co/blog/llama31](https://huggingface.co/blog/llama31)
 
 ### Model loading
 
