Reframe the relationship between supervised learning and reinforcement learning, clarifying that supervised learning can be viewed as a special case of reinforcement learning.

--- a/_posts/2024-09-22-rl-sl.md
+++ b/_posts/2024-09-22-rl-sl.md
@@ -143,10 +143,10 @@ learning with a simplified version of RL, specifically **contextual bandits** wi
 exploration. 
 
 One more thing is to mention is that supervised learning is inherently offline, although
-reinforcement learning can be done both offline and online. In framing reinforcement
-learning as supervised learning, we can consider that we just collect enough data in
-an online fashion from the environment, and train a supervised learning model with the
-collected offline data. 
+reinforcement learning can be done both offline and online. In framing supervised
+learning as a special case of reinforcement learning, we can consider that we just
+collect enough data in an online fashion from the environment, and train a supervised
+learning model with the collected offline data. 
 
 **Reinforcement learning** is a much more generalized and complex framework. It must
 handle transitions between states, stochastic rewards, and partial feedback—all while
