Fix formatting of mathematical notation in LLM post

--- a/_posts/2024-11-12-1+1.md
+++ b/_posts/2024-11-12-1+1.md
@@ -201,7 +201,7 @@ Now, we have reached an era where you can ask an **LLM** like ChatGPT to compute
 
   where:
 
-  - $$ P(\text{token}\_i) $$ is the probability of token $$ i $$.
+  - $$ P(\text{token}_i) $$ is the probability of token $$ i $$.
   - $$ z_i $$ is the logit corresponding to token $$ i $$.
 
 - **Sampling from the Categorical Distribution**: The model samples the next token based
