Improve formatting of code snippets and terminology in assembly post

--- a/_posts/2024-11-12-1+1.md
+++ b/_posts/2024-11-12-1+1.md
@@ -51,8 +51,8 @@ _start:
     ; Exit program (system-specific code omitted for brevity)
 ```
 
-- **Registers**: Small storage locations within the CPU (like AL) hold the data.
-- **Instructions**: Operations like mov and add correspond directly to machine code.
+- **Registers**: Small storage locations within the CPU hold the data.
+- **Instructions**: Operations like `mov` and `add` correspond directly to machine code.
 - **Memory Management**: Programmers manually manage memory and CPU registers.
 
 **Benefits**:
@@ -84,8 +84,8 @@ int main() {
 ```
 
 - **Compilation**: The C code is compiled into machine code before execution.
-- **Variables and Types**: Introduces variables (int result) and data types.
-- **Standard Libraries**: Provides functions like printf for input/output operations.
+- **Variables and Types**: Introduces variables (`int result`) and data types.
+- **Standard Libraries**: Provides functions like `printf` for input/output operations.
 
 **Benefits**:
 
