Refine Maximum Likelihood Estimation blog post to enhance clarity on multi-class classification and its connection to loss functions in machine learning.

--- a/_posts/2025-02-05-mle.md
+++ b/_posts/2025-02-05-mle.md
@@ -158,14 +158,27 @@ For classification tasks, if we assume the target labels follow a Bernoulli dist
 
   This is exactly the **binary cross-entropy loss**.
 
+
 - **Multi-Class Classification (Categorical):**  
-  For multi-class classification with one-hot encoded labels, the probability of the correct class is given by the model’s predicted probability, and the negative log-likelihood is:
+  In a multi-class classification problem with $$K$$ classes, each training sample is represented by a one-hot encoded vector 
+  $$y = (y_1, y_2, \dots, y_K),$$ 
+  where one element is 1 (indicating the true class) and the others are 0. The model outputs a predicted probability vector 
+  $$\hat{y} = (\hat{y}_1, \hat{y}_2, \dots, \hat{y}_K),$$ 
+  with the constraint that 
+  $$\sum_{c=1}^K \hat{y}_c = 1.$$  
+  The probability of observing the correct label given the prediction is defined as
 
   $$
-  -\sum_{c=1}^K y_c \log \hat{y}_c,
+  p(y \mid \hat{y}) = \prod_{c=1}^K \hat{y}_c^{\,y_c},
   $$
 
-  which is the **multi-class cross-entropy loss**.
+  which simplifies to the predicted probability of the true class. Taking the negative logarithm gives
+
+  $$
+  -\log p(y \mid \hat{y}) = -\sum_{c=1}^K y_c \log \hat{y}_c.
+  $$
+
+  This expression is exactly the **multi-class cross-entropy loss**.
 
 ---
 
@@ -249,11 +262,10 @@ since the constant term $$H(p)$$ does not affect the optimization.
 
 
 
-
 ## Conclusion
 
-Maximum Likelihood Estimation (MLE) is more than just a mathematical formulation—it is a powerful framework that underpins many of the techniques we use in machine learning. By framing parameter estimation as the problem of making the observed data as likely as possible, MLE connects seamlessly to the loss functions we optimize, whether that be Mean Squared Error (MSE) for Gaussian assumptions, Mean Absolute Error (MAE) for Laplace noise, or cross-entropy for classification tasks under Bernoulli/Categorical models.
+Maximum Likelihood Estimation (MLE) provides a unifying framework for understanding and designing loss functions in machine learning. At its core, MLE seeks the set of parameters that makes the observed data as likely as possible under a given probability model. This probabilistic approach naturally leads to common loss functions: assuming Gaussian noise results in the Mean Squared Error (MSE) loss, while a Laplace noise assumption leads to the Mean Absolute Error (MAE) loss. For classification tasks, modeling the data with Bernoulli or Categorical distributions gives rise to the cross-entropy loss—and when the true label distribution is fixed, minimizing cross-entropy is equivalent to minimizing the KL divergence between the true distribution and the model's predictions.
 
-In essence, choosing a loss function is equivalent to choosing a data distribution: our assumptions about noise and variability directly inform how we penalize errors. This not only affects model accuracy and optimization behavior but also influences how well our model captures the true underlying data-generating process. While MLE yields a single best-fit parameter value—a point estimate—this approach lays the groundwork for more advanced methods that capture uncertainty, which we’ll explore in future posts.
+Moreover, the choice of loss function reflects our assumptions about the data-generating process. Aligning the loss function with these assumptions is crucial because it directly influences model accuracy, the behavior of the optimization process, and how sensitive the model is to various types of errors. Although MLE yields a single best-fit parameter value—a point estimate—it forms the foundation upon which more advanced techniques (such as Bayesian methods for capturing uncertainty) are built.
 
-By understanding MLE, you gain a clearer insight into why models are trained the way they are and how to make informed choices about the loss functions that drive your learning algorithms.
+By understanding MLE and its intimate connection to loss functions, you gain valuable insight into why models are trained the way they are and how the underlying assumptions about noise and variability shape the learning process. This understanding can empower you to make more informed choices in designing and optimizing machine learning models.
